P01/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
22:20:58 **** Incremental Build of configuration Debug for project EncorderProject ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F756xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -I../FATFS/Target -I../FATFS/App -I../Middlewares/Third_Party/FatFs/src -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "EncorderProject.elf" @"objects.list"   -mcpu=cortex-m7 -T"C:\Users\ashen\Documents\GitHub\MSc-Project\P01\EncorderProject\STM32F756ZGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="EncorderProject.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: EncorderProject.elf
 
arm-none-eabi-size  EncorderProject.elf 
arm-none-eabi-objdump -h -S EncorderProject.elf  > "EncorderProject.list"
   text	   data	    bss	    dec	    hex	filename
  36732	    192	  12824	  49748	   c254	EncorderProject.elf
Finished building: default.size.stdout
 
Finished building: EncorderProject.list
 
22:21:01 **** Incremental Build of configuration Debug for project EncorderProject ****
make -j12 all 
arm-none-eabi-size  EncorderProject.elf 
   text	   data	    bss	    dec	    hex	filename
  36732	    192	  12824	  49748	   c254	EncorderProject.elf
Finished building: default.size.stdout
 
22:26:24 **** Incremental Build of configuration Debug for project EncorderProject ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F756xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -I../FATFS/Target -I../FATFS/App -I../Middlewares/Third_Party/FatFs/src -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:163:1: error: unknown type name 'DFRobot_GP8XXX_IIC'
  163 | DFRobot_GP8XXX_IIC gp8xxx;
      | ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:40: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
22:26:42 **** Incremental Build of configuration Debug for project EncorderProject ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F756xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -I../FATFS/Target -I../FATFS/App -I../Middlewares/Third_Party/FatFs/src -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "EncorderProject.elf" @"objects.list"   -mcpu=cortex-m7 -T"C:\Users\ashen\Documents\GitHub\MSc-Project\P01\EncorderProject\STM32F756ZGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="EncorderProject.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: EncorderProject.elf
 
arm-none-eabi-size  EncorderProject.elf 
arm-none-eabi-objdump -h -S EncorderProject.elf  > "EncorderProject.list"
   text	   data	    bss	    dec	    hex	filename
  33792	    192	  12824	  46808	   b6d8	EncorderProject.elf
Finished building: default.size.stdout
 
Finished building: EncorderProject.list
 
